src/main/default/objects/DR_Invoice_Credit_Memo__c/DR_Invoice_Credit_Memo__c.object-meta.xml
<CustomObject>
    <description>This object stores DR Invoice and Credit Memo File information</description>
    <label>DR Invoice And Credit Memo</label>
    <nameField>
        <displayFormat>DR-Inv-CrMemo-{000000}</displayFormat>
        <label>DR Invoice Credit Memo Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DR Invoice And Credit Memos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>