src/main/default/objects/DR_Invoice_Credit_Memo__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <description>Stores DR order.invoice.created or order.credit_memo.created Event Id</description>
    <inlineHelpText>Stores DR order.invoice.created or order.credit_memo.created Event Id</inlineHelpText>
    <label>Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>