src/main/default/objects/DR_Invoice_Credit_Memo__c/fields/File_Id__c.field-meta.xml
<CustomField>
    <fullName>File_Id__c</fullName>
    <description>Stores DR Invoice or Credit Memo File Id.</description>
    <inlineHelpText>Stores DR Invoice or Credit Memo File Id</inlineHelpText>
    <label>File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>