src/main/default/objects/DR_Invoice_Credit_Memo__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <description>Stores DR File Type</description>
    <inlineHelpText>Stores DR File Type</inlineHelpText>
    <label>File Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Credit Memo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>