src/main/default/objects/DR_Invoice_Credit_Memo__c/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Order for which the DR Invoice or Credit Memo was generated</description>
    <inlineHelpText>Order for which the DR Invoice or Credit Memo was generated</inlineHelpText>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>DR Invoice And Credit Memos</relationshipLabel>
    <relationshipName>DR_Invoice_And_Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>